Separate the codes into different files. Add comments.

--- a/DiningPhilosophers/DiningPhilosophers.csproj
+++ b/DiningPhilosophers/DiningPhilosophers.csproj
@@ -43,6 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Chopstick.cs" />
+    <Compile Include="Philosopher.cs" />
+    <Compile Include="PhilosopherState_Enum.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
